5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1712_2506.log
== TEST (2019-05-13 14:30:30) 
-- CODE:
Qi=int(input())
Pc=int(input())/100
Qv=int(input())
ano=0
while(Qi>Qv):
	ano=ano+1
	if(Qi<Qv):
		print("EXTINCAO")
	else:
		print("LIMITE")
print(ano)		
-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:35:43) 
-- CODE:
Qi=int(input())
Pc=int(input())/100
Qv=int(input())
ano=0
while(Qi>Qv):
	ano=ano+1
	if(Qi<Qv):
		print("EXTINCAO")
	else:
		print("LIMITE")
print(ano)		
-- EXECUTION TIME:
312.936
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:

-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:35:43) 
-- CODE:
Qi=int(input())
Pc=int(input())/100
Qv=int(input())
ano=0
while(Qi>Qv):
	ano=ano+1
	if(Qi<Qv):
		print("EXTINCAO")
	else:
		print("LIMITE")
-- EXECUTION TIME:
346.904
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:12:56) 
-- CODE:
Qi=int(input())
Pc=float(input())/100
Qv=int(input())
t=0
while(Qi>0 and	 Qi<12000 and Pc>0 and Qv>0):
	t=t+1
	a=Qi+(Qi*Pc)
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	
-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:13:51) 
-- CODE:
Qi=int(input())
Pc=float(input())/100
Qv=int(input())
t=0
a=0
while((Qi>0 and	 Qi<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=Qi+(Qi*Pc)
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	
-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:15:00) 
-- CODE:
Qi=int(input())
Pc=float(input())/100
Qv=int(input())
t=0
a=Q1
while((a>0 and	 a<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=a+(a*Pc)
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	
-- EXECUTION TIME:
0.202454
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2506/main.py", line 5, in <module>
    a=Q1
NameError: name 'Q1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:16:47) 
-- CODE:
Qi=int(input())
Pc=float(input())/100
Qv=int(input())
t=0
a=Q1
while((a>0 and	 a<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=a+(a*Pc)
	a= a-Qv
	if(a>=12000):
	print("LIMITE")
	print(t)
	else:
	print("EXTINCAO")
	
-- EXECUTION TIME:
0.291476
-- ERROR:
  File "/home/codebench/codes/1712/2506/main.py", line 11
    print("LIMITE")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:17:39) 
-- CODE:
Qi=int(input())
Pc=float(input())/100
Qv=int(input())
t=0
a=Q1
while((a>0 and	 a<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=a+(a*Pc)
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=Q1
NameError: name 'Q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:17:59) 
-- CODE:
Qi=int(input())
Pc=float(input())/100
Qv=int(input())
t=0
a=Qi
while((a>0 and	 a<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=a+(a*Pc)
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	
-- OUTPUT:
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:18:09) 
-- CODE:
Qi=int(input())
Pc=float(input())/100
Qv=int(input())
t=0
a=Qi
while((a>0 and	 a<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=a+(a*Pc)
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	
-- EXECUTION TIME:
0.154476
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:18:45) 
-- CODE:
Qi=int(input())
Pc=float(input())/100
Qv=int(input())
t=0
a=Qi
while((a>0 and	 a<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=a+(a*Pc)
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print(t)
	print("EXTINCAO")
	
-- EXECUTION TIME:
0.158868
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
EXTINCAO
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:18:48) 
-- CODE:
Qi=int(input())
Pc=float(input())/100
Qv=int(input())
t=0
a=Qi
while((a>0 and	 a<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=a+(a*Pc)
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print(t)
	print("EXTINCAO")
	
-- OUTPUT:
14
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:18:57) 
-- CODE:
Qi=int(input())
Pc=float(input())/100
Qv=int(input())
t=0
a=Qi
while((a>0 and	 a<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=a+(a*Pc)
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print(t)
	print("EXTINCAO")
	
-- OUTPUT:
14
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:21:43) 
-- CODE:
Qi=int(input())
Pc=float(input())/100
Qv=int(input())
t=0
a=Qi
while((a>0 and	 a<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=a+(a*Pc)
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print(t)
	print("EXTINCAO")
	
-- EXECUTION TIME:
0.171153
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
EXTINCAO
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:27:38) 
-- CODE:
Qi=int(input())
Pc=float(input())/100
Qv=int(input())
t=0
a=Qi
while((a>0 and	 a<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=a+(a*Pc)
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	
-- EXECUTION TIME:
0.142162
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:27:41) 
-- CODE:
Qi=int(input())
Pc=float(input())/100
Qv=int(input())
t=0
a=Qi
while((a>0 and	 a<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=a+(a*Pc)
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	
-- OUTPUT:
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:28:21) 
-- CODE:
Qi=int(input())
Pc=float(input())
Qv=int(input())
t=0
a=Qi
while((a>0 and	 a<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=a+(a*Pc/100)
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	
-- EXECUTION TIME:
0.12938
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:28:24) 
-- CODE:
Qi=int(input())
Pc=float(input())
Qv=int(input())
t=0
a=Qi
while((a>0 and	 a<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=a+(a*Pc/100)
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	
-- OUTPUT:
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:28:41) 
-- CODE:
Qi=int(input())
Pc=float(input())
Qv=int(input())
t=0
a=Qi
while((a>0 and	 a<12000) and (Pc>0 and Qv>0)):
	t=t+1
	a=a+(a*(Pc/100))
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	
-- EXECUTION TIME:
0.181173
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:29:57) 
-- CODE:
Qi=int(input())
Pc=float(input())
Qv=int(input())
t=0
a=Qi
while(a>0 and	 a<12000 and Pc>0 and Qv>0):
	t=t+1
	a=a+(a*(Pc/100))
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	
-- EXECUTION TIME:
0.211821
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:32:08) 
-- CODE:
Qi=int(input())
Pc=float(input())
Qv=int(input())
t=0
a=Qi
while(a>0) and	 (a<12000) and (Pc>0) and (Qv>0):
	t=t+1
	a=a+(a*(Pc/100))
	a= a-Qv
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	print(t)
	
-- EXECUTION TIME:
0.19391
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
